--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -66,8 +66,16 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "isomorphic-fetch": "^2.2.1",
+    "morgan": "~1.7.0",
+    "nunjucks": "^3.0.0",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "serve-favicon": "~2.3.0"
   },
   "optionalDependencies": {
     "fsevents": "1.0.14"
