--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "@lostmyname/stylelint-config-lmn": "^1.1.0",
     "autoprefixer": "6.5.1",
     "babel-core": "6.21.0",
     "babel-eslint": "7.1.1",
@@ -49,6 +50,7 @@
     "http-proxy-middleware": "0.17.2",
     "jest": "18.0.0",
     "json-loader": "0.5.4",
+    "node-sass": "^4.3.0",
     "object-assign": "4.1.0",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
