Include lib folder in react-scripts package

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lostmyname/react-scripts",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebookincubator/create-react-app",
   "license": "BSD-3-Clause",
@@ -15,6 +15,7 @@
     ".eslintrc",
     "bin",
     "config",
+    "lib",
     "scripts",
     "template",
     "utils"
