--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lostmyname/react-scripts",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebookincubator/create-react-app",
   "license": "BSD-3-Clause",
@@ -13,6 +13,7 @@
   "files": [
     ".babelrc",
     ".eslintrc",
+    ".stylelintrc",
     "bin",
     "config",
     "lib",
