--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -58,7 +58,10 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
+    "react-redux": "^5.0.2",
     "recursive-readdir": "2.1.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^4.1.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
