--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -49,6 +49,7 @@
     "filesize": "3.3.0",
     "fs-extra": "1.0.0",
     "gzip-size": "3.0.0",
+    "history": "^4.5.1",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
     "jest": "18.0.0",
@@ -59,6 +60,7 @@
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "recursive-readdir": "2.1.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
