--- a/packages/react-scripts/.babelrc
+++ b/packages/react-scripts/.babelrc
@@ -1,11 +1,10 @@
 {
   "presets": [
-    "react",
-    ["es2015", {
-      "modules": false
-    }]
-  ],
-  "plugins": [
-    "transform-object-rest-spread"
+    ["env", {
+      "targets": { "node": true }
+      }
+    ],
+    "stage-3",
+    "react"
   ]
 }
