--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -32,8 +32,11 @@
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.22.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -48,8 +51,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "1.0.0",
-    "gzip-size": "3.0.0",
-    "history": "^4.5.1",
+    "gzip-size": "3.0.0",  
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
     "jest": "18.0.0",
