--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -51,7 +51,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "1.0.0",
-    "gzip-size": "3.0.0",  
+    "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
     "jest": "18.0.0",
@@ -63,6 +63,7 @@
     "react-dev-utils": "^0.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "recompose": "^0.22.0",
     "recursive-readdir": "2.1.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
