Rethink, simplify, redux it

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -61,12 +61,12 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
-    "react-jobs": "^0.6.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "recompose": "^0.22.0",
     "recursive-readdir": "2.1.0",
     "redux": "^3.6.0",
+    "redux-ready": "^0.1.1",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^4.1.1",
     "strip-ansi": "3.0.1",
